rerun to add 'State'

--- a/code/1_merged_datasets_for_labeled_data.ipynb
+++ b/code/1_merged_datasets_for_labeled_data.ipynb
@@ -45,46 +45,11 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Ymr4TATMbZSD",
-        "colab_type": "text"
-      },
-      "source": [
-        "## Initializations"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "oce2DjepqwkI",
-        "colab_type": "code",
-        "outputId": "af249996-0cad-40c3-db70-3415933599c8",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
-      },
-      "source": [
-        "!pip install boto"
-      ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: boto in /usr/local/lib/python3.6/dist-packages (2.49.0)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "Yym1cREsbgcZ",
         "colab_type": "code",
-        "outputId": "bd68354b-a874-4b37-e700-0c2160bd1db0",
+        "outputId": "3118a26e-f43d-46e5-a592-c54a78c59d32",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -100,9 +65,11 @@
         "cmd_string = \"! git clone https://{0}:{1}@github.com/rgranit/academix-ydata-project AYP\".format(user, password)\n",
         "\n",
         "os.system(cmd_string)\n",
-        "cmd_string, password = \"\", \"\" # removing the password from the variable"
+        "cmd_string, password = \"\", \"\" # removing the password from the variable\n",
+        "\n",
+        "%cd /content/AYP/code"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,28 +82,13 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "pPcOMf-9btLg",
-        "colab_type": "code",
-        "outputId": "70ff0cc1-74dd-434c-94b8-f52f530380bd",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "id": "Ymr4TATMbZSD",
+        "colab_type": "text"
       },
       "source": [
-        "%cd /content/AYP/code"
-      ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/content/AYP/code\n"
-          ],
-          "name": "stdout"
-        }
+        "## Initializations"
       ]
     },
     {
@@ -144,11 +96,7 @@
       "metadata": {
         "id": "qAgD483hbxQk",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 71
-        },
-        "outputId": "afe8dd9f-fe34-42a8-978d-6226cc65d9cc"
+        "colab": {}
       },
       "source": [
         "from boto.s3.connection import S3Connection\n",
@@ -159,17 +107,36 @@
         "import numpy as np\n",
         "import s3_functions\n",
         "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns; sns.set()"
+        "import seaborn as sns; sns.set()\n",
+        "\n",
+        "PATH = \"data/labeled_dataset/\"\n",
+        "FILE = \"NIH_postcleaning.csv\""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4stL4Z-bsVfi",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "5a5dbdea-34cb-4169-984e-a7a49121ec80"
+      },
+      "source": [
+        "# cd ..\n"
       ],
       "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/usr/local/lib/python3.6/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
-            "  import pandas.util.testing as tm\n"
+            "/content/AYP\n"
           ],
-          "name": "stderr"
+          "name": "stdout"
         }
       ]
     },
@@ -181,14 +148,23 @@
         "colab": {}
       },
       "source": [
-        "df_nih = s3_functions.get_dataframe_from_s3(file=\"NIH_postcleaning.csv\")\n",
-        "df_nih.drop('Unnamed: 0',axis=1, inplace=True)\n",
+        "if os.path.exists(PATH + FILE):\n",
+        "  print(\"Getting NIH from File\")\n",
+        "  df_nih = pd.read_csv(file= PATH + File)\n",
+        "  df_nih.drop('Unnamed: 0',axis=1, inplace=True)\n",
+        "\n",
+        "else:\n",
+        "  print(\"Getting NIH from S3\")\n",
+        "  df_nih = s3_functions.get_dataframe_from_s3(file=\"NIH_postcleaning.csv\")    \n",
+        "  df_nih.drop('Unnamed: 0',axis=1, inplace=True)\n",
         "\n",
         "# Retrieve Enriched Academix Data\n",
+        "print(\"Getting Academix Enriched Dataset from S3\")\n",
         "df_aca_r = s3_functions.get_dataframe_from_s3(file=\"academix_enriched.json\",type=\"json\")\n",
         "#df_aca_r.drop('Unnamed: 0',axis=1, inplace=True)\n",
         "\n",
         "# Retrieve Not Enriched Academix Data\n",
+        "print(\"Getting Academic non-enriched Dataset from S3\")\n",
         "df_aca_nr = s3_functions.get_dataframe_from_s3(file=\"academix_not_enriched.csv\")\n",
         "df_aca_nr.drop('Unnamed: 0',axis=1, inplace=True)"
       ],
@@ -210,7 +186,7 @@
       "metadata": {
         "id": "OH7EMDy4rkqf",
         "colab_type": "code",
-        "outputId": "afdeaea9-465a-4d80-cf4a-b44f5f698ed7",
+        "outputId": "8800db26-11c7-4e15-d825-93cd0117d010",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -219,7 +195,7 @@
       "source": [
         "df_nih.head()"
       ],
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -244,6 +220,7 @@
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
               "      <th>PMID</th>\n",
+              "      <th>ORG_STATE</th>\n",
               "      <th>PI_IDS</th>\n",
               "      <th>cleaned_name</th>\n",
               "    </tr>\n",
@@ -251,51 +228,56 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>30147749</td>\n",
-              "      <td>8352708</td>\n",
-              "      <td>Madabhushi, A</td>\n",
+              "      <td>27100959</td>\n",
+              "      <td>PA</td>\n",
+              "      <td>9888997</td>\n",
+              "      <td>Walker, JL</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>30147749</td>\n",
-              "      <td>9354221</td>\n",
-              "      <td>Paladini, G</td>\n",
+              "      <td>27100959</td>\n",
+              "      <td>PA</td>\n",
+              "      <td>12096022</td>\n",
+              "      <td>Wickerham, DL</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>30147749</td>\n",
-              "      <td>9258689</td>\n",
-              "      <td>Wang, F</td>\n",
+              "      <td>29136387</td>\n",
+              "      <td>PA</td>\n",
+              "      <td>9888997</td>\n",
+              "      <td>Walker, JL</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>19810465</td>\n",
-              "      <td>8352708</td>\n",
-              "      <td>Madabhushi, A</td>\n",
+              "      <td>29136387</td>\n",
+              "      <td>PA</td>\n",
+              "      <td>12096022</td>\n",
+              "      <td>Wickerham, DL</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>19810465</td>\n",
-              "      <td>9354221</td>\n",
-              "      <td>Paladini, G</td>\n",
+              "      <td>29102648</td>\n",
+              "      <td>PA</td>\n",
+              "      <td>9888997</td>\n",
+              "      <td>Walker, JL</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "       PMID   PI_IDS   cleaned_name\n",
-              "0  30147749  8352708  Madabhushi, A\n",
-              "1  30147749  9354221    Paladini, G\n",
-              "2  30147749  9258689        Wang, F\n",
-              "3  19810465  8352708  Madabhushi, A\n",
-              "4  19810465  9354221    Paladini, G"
+              "       PMID ORG_STATE    PI_IDS   cleaned_name\n",
+              "0  27100959        PA   9888997     Walker, JL\n",
+              "1  27100959        PA  12096022  Wickerham, DL\n",
+              "2  29136387        PA   9888997     Walker, JL\n",
+              "3  29136387        PA  12096022  Wickerham, DL\n",
+              "4  29102648        PA   9888997     Walker, JL"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 7
         }
       ]
     },
@@ -304,7 +286,7 @@
       "metadata": {
         "id": "a18HO9K8saiI",
         "colab_type": "code",
-        "outputId": "67df038e-23b1-4e38-eb6d-24a908968fe9",
+        "outputId": "5f03357b-a23b-4f87-d544-dd12e4a03c1c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 547
@@ -313,7 +295,7 @@
       "source": [
         "df_aca_r.head()"
       ],
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -463,7 +445,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 8
         }
       ]
     },
@@ -501,7 +483,7 @@
       "metadata": {
         "id": "VXoVQg4VLO4l",
         "colab_type": "code",
-        "outputId": "c61c26f1-4966-457a-e30e-29451d484468",
+        "outputId": "b127aa9e-0b13-4baf-9034-b448094d13e8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 168
@@ -510,7 +492,7 @@
       "source": [
         "df_aca_r[df_aca_r.pmid == 29956882]"
       ],
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -584,7 +566,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 11
         }
       ]
     },
@@ -607,7 +589,7 @@
       "metadata": {
         "id": "m33zMr9nL1Zc",
         "colab_type": "code",
-        "outputId": "c4060a40-537c-42ef-ad73-cd25144074f0",
+        "outputId": "32dea8d6-0e4e-4c33-d30f-41d850a8fc71",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -616,19 +598,19 @@
       "source": [
         "df_join.shape"
       ],
-      "execution_count": 12,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(97195, 16)"
+              "(92887, 17)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 13
         }
       ]
     },
@@ -647,7 +629,7 @@
       "metadata": {
         "id": "so0zCJ7pwnJ4",
         "colab_type": "code",
-        "outputId": "6099e809-96af-404f-c289-3918d28e89ef",
+        "outputId": "46889ca2-1e99-4659-af2d-939ac6182cab",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -656,7 +638,7 @@
       "source": [
         "np.any(df_join.groupby(['pmid','PI_IDS']).size() > 1)"
       ],
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -668,7 +650,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 14
         }
       ]
     },
@@ -714,7 +696,7 @@
       "metadata": {
         "id": "E2yDVCD0xlMm",
         "colab_type": "code",
-        "outputId": "c1d9a386-868c-488a-c181-090fbb01e3ab",
+        "outputId": "79eaf652-0ddc-4bd3-ff6c-14a47bfe68a7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -723,19 +705,19 @@
       "source": [
         "df_join_nr.shape"
       ],
-      "execution_count": 16,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(20088, 11)"
+              "(21029, 12)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 17
         }
       ]
     },
@@ -744,7 +726,7 @@
       "metadata": {
         "id": "3s4-xEwzyOu8",
         "colab_type": "code",
-        "outputId": "604d550e-806f-4097-ff97-f78934444249",
+        "outputId": "deaec8ce-9de6-442d-8087-17070dd376c6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -753,19 +735,19 @@
       "source": [
         "np.any(df_join_nr.groupby(['pmid','PI_IDS']).size() > 1)"
       ],
-      "execution_count": 17,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "False"
+              "True"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 18
         }
       ]
     },
@@ -812,7 +794,7 @@
         "colab": {}
       },
       "source": [
-        "df_join.to_json('enriched_labeled_dataset.json', orient=\"records\")\n"
+        "df_join.to_json('enriched_labeled_dataset.json', orient=\"records\")"
       ],
       "execution_count": 0,
       "outputs": []
@@ -827,7 +809,7 @@
       "source": [
         "file = open(\"enriched_labeled_dataset.json\", \"r+\")\n",
         "s3_functions.upload_to_s3(file=file,key= file.name)\n",
-        "file.close()\n"
+        "file.close()"
       ],
       "execution_count": 0,
       "outputs": []
@@ -840,7 +822,7 @@
         "colab": {}
       },
       "source": [
-        "df_join_nr.to_csv('not_enriched_labeled_dataset.csv')\n"
+        "df_join_nr.to_csv('not_enriched_labeled_dataset.csv')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -979,17 +961,17 @@
       "metadata": {
         "id": "3_Ah1IwWMHla",
         "colab_type": "code",
+        "outputId": "158431d9-931f-4f8c-9c74-ae0cb967b631",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 238
-        },
-        "outputId": "158431d9-931f-4f8c-9c74-ae0cb967b631"
+        }
       },
       "source": [
         "num_auth_per_name =  df_join_test.groupby('last_author_name')['PI_IDS'].nunique()\n",
         "num_auth_per_name[num_auth_per_name == 1]"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1022,16 +1004,16 @@
       "metadata": {
         "id": "F842Y4S1PgQs",
         "colab_type": "code",
+        "outputId": "845d3a01-198e-49bd-8404-58923029a88a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 163
-        },
-        "outputId": "845d3a01-198e-49bd-8404-58923029a88a"
+        }
       },
       "source": [
         "author_list = df_join_test.groupby('last_author_name')[['PI_IDS','pmid']].nunique()"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "error",
@@ -1228,18 +1210,18 @@
       "metadata": {
         "id": "xYQFnh93RoNj",
         "colab_type": "code",
+        "outputId": "bbdcdaa9-46e1-4564-dbd5-f44536dba34b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 274
-        },
-        "outputId": "bbdcdaa9-46e1-4564-dbd5-f44536dba34b"
+        }
       },
       "source": [
         "plt.scatter(dist_x,dist_y)\n",
         "plt.xscale(\"log\")\n",
         "plt.yscale(\"log\")"
       ],
-      "execution_count": 43,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
