Working Log_Reg

--- a/code/2_metric_classification.ipynb
+++ b/code/2_metric_classification.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "2_metric_classification.ipynb",
-      "provenance": [],
-      "authorship_tag": "ABX9TyNtMrNIP67fPrwJIXpGD11X",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -130,29 +116,19 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "-qVMIe5tIK9Y",
-        "colab_type": "code",
-        "outputId": "1c9e6078-2a2c-410b-811f-e88a327afcd9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "colab_type": "code",
+        "id": "-qVMIe5tIK9Y",
+        "outputId": "1c9e6078-2a2c-410b-811f-e88a327afcd9"
       },
       "source": [
         "%cd AYP/\n",
         "sys.path.append('./code/')"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/content/AYP\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
@@ -440,5 +416,19 @@
         "**Still needs to be discussed when # of clusters is larger and smaller than the #  of pi_ids**"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "2_metric_classification.ipynb",
+      "provenance": [],
+      "authorship_tag": "ABX9TyNtMrNIP67fPrwJIXpGD11X",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
