--- a/code/3_Logisitic_Regression_Model.ipynb
+++ b/code/3_Logisitic_Regression_Model.ipynb
@@ -49,18 +49,27 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "q5hAha94LkS1",
-        "colab_type": "code",
-        "colab": {}
-      },
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
         "import os, re, sys\n",
         "\n",
         "CWD = 'c:\\\\Users\\\\shaul\\\\Documents\\\\GitHub\\\\academix-ydata-project\\\\code'\n",
         "if os.getcwd() != CWD:\n",
         "    os.chdir(\"./code/\")\n",
-        "\n",
+        "%load_ext autoreload\n",
+        "%autoreload 2"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q5hAha94LkS1",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         "from boto.s3.connection import S3Connection\n",
         "from boto.s3.key import Key\n",
         "from boto import s3\n",
@@ -82,19 +91,15 @@
         "from sklearn.metrics import recall_score\n",
         "from collections import defaultdict\n",
         "\n",
-        "import importlib\n",
         "import lr_model_3\n",
-        "importlib.reload(lr_model_3)\n",
-        "\n",
-        "#%load_ext autoreload\n",
-        "#%autoreload 2\n",
+        "import metric_eval_2\n",
         "\n",
         "%matplotlib inline\n",
         "\n",
         "PATH = \"C:/Users/shaul/Documents/GitHub/academix-ydata-project/data/labeled_data/\"\n",
         "FILE = \"enriched_labeled_dataset.json\""
       ],
-      "execution_count": 253,
+      "execution_count": 269,
       "outputs": []
     },
     {
@@ -178,24 +183,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 215,
+      "execution_count": 272,
       "metadata": {},
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": "Total number of papers:  165\nBuilding Same Author Column\nNumber of paper combinations (pre-cleaning) is:  27225\nGetting Similarities\nComparing Authors\nComparing Mesh\nComparing Forenames\nComparing Institutions\nComparing Emails\nComparing Countries\nKeeping Doubles\nReturning Similarity Matrix.\nNumber of pairs after cleaning:  27225\n"
-        },
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'eps' is not defined",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[1;32m<ipython-input-215-2e1c50fc8fad>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mdist_mat\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlr_model_3\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_dist_matrix\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mps\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdf_db\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mbest_model\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0my_hat\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mDBS\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0meps\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0meps\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmin_samples\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmetric\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"precomputed\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdist_mat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[1;31mNameError\u001b[0m: name 'eps' is not defined"
-          ]
         }
       ],
       "source": [
@@ -204,7 +198,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 216,
+      "execution_count": 324,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -213,14 +207,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 233,
+      "execution_count": 325,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": "2"
+          },
+          "metadata": {},
+          "execution_count": 325
+        }
+      ],
+      "source": [
+        "len(np.unique(y_hat.labels_))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 326,
       "metadata": {},
       "outputs": [],
       "source": [
         "df_core = df_db[[\"pmid\",\"PI_IDS\"]]\n",
         "df_core['cluster_pred'] = y_hat.labels_\n",
         "num_clusters = np.unique(y_hat.labels_)\n",
-        "df_core = lr_model_3.assign_labels_to_clusters(df_core, num_clusters)"
+        "df_core = metric_eval_2.assign_labels_to_clusters(df_core, num_clusters)"
       ]
     },
     {
@@ -232,17 +244,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 266,
+      "execution_count": 335,
       "metadata": {},
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
-          "text": "Precision score: 0.4909090909090909, Recall score: 0.4909090909090909\nMis-Separation:  {2: 1, 3: 2}\nMis-Integration:  {3: 2, 2: 1}\n"
+          "text": "Number of clusters (DBS): 2\nNumber of unique authors: 3\nPrecision score: 0.5272727272727272, Recall score: 0.5272727272727272\n                 1 cluster(s)  2 cluster(s)\nmis_integration             1             2\nmis_separation              1             2\n"
         }
       ],
       "source": [
-        "lr_model_3.get_metrics(df_core)"
+        "df_eval = metric_eval_2.get_metrics(df_core)"
       ]
     },
     {
