changed the name of dataset

--- a/code/3_Logisitic_Regression_Model.ipynb
+++ b/code/3_Logisitic_Regression_Model.ipynb
@@ -49,15 +49,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": "The autoreload extension is already loaded. To reload it, use:\n  %reload_ext autoreload\n"
-        }
-      ],
+      "outputs": [],
       "source": [
         "%load_ext autoreload\n",
         "%autoreload 2"
@@ -99,7 +93,7 @@
         "#DATA_PATH = DATA_PATH + \"labeled_data/\"\n",
         "FILE = \"enriched_labeled_dataset.json\""
       ],
-      "execution_count": 37,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -109,7 +103,20 @@
         {
           "output_type": "stream",
           "name": "stdout",
-          "text": "READING FROM LOCAL\n"
+          "text": "PULLING FROM S3\n"
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyError",
+          "evalue": "'enriched_labeled_dataset'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-5-6f18e42b31bc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"PULLING FROM S3\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0mps\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msim_matrix_3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"enriched_labeled_dataset\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m~/Desktop/ydata/industry_project/repo/academix-ydata-project/code/sim_matrix_3.py\u001b[0m in \u001b[0;36mload_dataset\u001b[0;34m(set_name)\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mload_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0mps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mPaperSource\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m     \u001b[0mps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mps\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mget_res_papers\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mps\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mauthor_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m~/Desktop/ydata/industry_project/repo/academix-ydata-project/code/yuval_module/paper_source.py\u001b[0m in \u001b[0;36mload_dataset\u001b[0;34m(self, set_name)\u001b[0m\n\u001b[1;32m     36\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'AWS_ACCESS_SECRET_KEY'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'BUCKET'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 38\u001b[0;31m                 \u001b[0mfile\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdatasets\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mset_name\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     39\u001b[0m                 \u001b[0mtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'json'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m             )\n",
+            "\u001b[0;31mKeyError\u001b[0m: 'enriched_labeled_dataset'"
+          ]
         }
       ],
       "source": [
@@ -122,13 +129,13 @@
         "    ps = PaperSource()\n",
         "else:\n",
         "    print(\"PULLING FROM S3\")\n",
-        "    ps = sim_matrix_3.load_dataset(\"enriched_labeled_dataset\")\n",
+        "    ps = sim_matrix_3.load_dataset(\"enriched_labeled\")\n",
         "    df = ps.get_dataset()\n",
         "\n",
         "df.drop(columns=[\"last_author_country\"],inplace=True)\n",
         "df.rename(columns={'ORG_STATE':'last_author_country'},inplace=True)"
       ],
-      "execution_count": 7
+      "execution_count": 5
     },
     {
       "cell_type": "markdown",
@@ -392,8 +399,8 @@
       "include_colab_link": true
     },
     "kernelspec": {
-      "name": "python36064bitfbb4224caa94405ca5a0ec832b3f454b",
-      "display_name": "Python 3.6.0 64-bit"
+      "name": "python36864bitnlpcondaedb4459334ba4ee28e4936a12647cfbd",
+      "display_name": "Python 3.6.8 64-bit ('nlp': conda)"
     }
   },
   "nbformat": 4,
