Run Yuval's original code

--- a/code/3_Logisitic_Regression_Model.ipynb
+++ b/code/3_Logisitic_Regression_Model.ipynb
@@ -35,21 +35,12 @@
         "\n",
         "# %cd ./AYP/code"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "User name: ShaulSolomon\n",
-            "Password: ··········\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 1,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -73,6 +64,8 @@
         "\n",
         "from yuval_module.paper_clusterer import PaperClusterer\n",
         "from yuval_module.paper_source import PaperSource\n",
+        "import yuval_module.dbscan as yuval_dbscan\n",
+        "\n",
         "\n",
         "from sklearn.linear_model import LogisticRegression as LogR\n",
         "from sklearn.model_selection import GridSearchCV\n",
@@ -91,10 +84,28 @@
         "import utils\n",
         "from utils import PROJECT_ROOT, DATA_PATH\n",
         "#DATA_PATH = DATA_PATH + \"labeled_data/\"\n",
-        "FILE = \"enriched_labeled_dataset.json\""
+        "FILE = \"enriched_labeled_dataset.json\"\n"
       ],
-      "execution_count": 4,
+      "execution_count": 10,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": "'/Users/roygranit/Desktop/ydata/industry_project/repo/academix-ydata-project/data/labeled_dataset/enriched_labeled_dataset.json'"
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ],
+      "source": [
+        "PROJECT_ROOT + DATA_PATH + FILE"
+      ]
     },
     {
       "cell_type": "code",
@@ -104,28 +115,17 @@
           "output_type": "stream",
           "name": "stdout",
           "text": "PULLING FROM S3\n"
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyError",
-          "evalue": "'enriched_labeled_dataset'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-5-6f18e42b31bc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"PULLING FROM S3\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0mps\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msim_matrix_3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"enriched_labeled_dataset\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m~/Desktop/ydata/industry_project/repo/academix-ydata-project/code/sim_matrix_3.py\u001b[0m in \u001b[0;36mload_dataset\u001b[0;34m(set_name)\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mload_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0mps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mPaperSource\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m     \u001b[0mps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_dataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mset_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mps\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mget_res_papers\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mps\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mauthor_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m~/Desktop/ydata/industry_project/repo/academix-ydata-project/code/yuval_module/paper_source.py\u001b[0m in \u001b[0;36mload_dataset\u001b[0;34m(self, set_name)\u001b[0m\n\u001b[1;32m     36\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'AWS_ACCESS_SECRET_KEY'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreds\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'BUCKET'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 38\u001b[0;31m                 \u001b[0mfile\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdatasets\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mset_name\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     39\u001b[0m                 \u001b[0mtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'json'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m             )\n",
-            "\u001b[0;31mKeyError\u001b[0m: 'enriched_labeled_dataset'"
-          ]
         }
       ],
       "source": [
         "if os.path.exists(PROJECT_ROOT + DATA_PATH + FILE):\n",
         "    print(\"READING FROM LOCAL\")\n",
         "    if FILE.split(\".\")[1] == \"json\":\n",
-        "        df = pd.read_json(PROJECT_ROOT + DATA_PATH + FILE)\n",
+        "        print(PROJECT_ROOT + DATA_PATH + FILE)\n",
+        "        df = pd.read_json(\"/Users/roygranit/Desktop/ydata/industry_project/repo/academix-ydata-project/data/labeled_dataset/enriched_labeled_dataset.json\")\n",
         "    else:\n",
         "        df = pd.read_csv(PROJECT_ROOT + DATA_PATH + FILE)\n",
+        "        \n",
         "    ps = PaperSource()\n",
         "else:\n",
         "    print(\"PULLING FROM S3\")\n",
@@ -135,7 +135,62 @@
         "df.drop(columns=[\"last_author_country\"],inplace=True)\n",
         "df.rename(columns={'ORG_STATE':'last_author_country'},inplace=True)"
       ],
-      "execution_count": 5
+      "execution_count": 12
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# DB scan using Yuval's code"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 73,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "df_core = sim_matrix_3.top_authors(df,use_case = \"base\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 74,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": "0%|          | 0/100 [00:00<?, ?it/s]Running Yuval's DBscan\n\nComparing Authors\n\nComparing Mesh\n\n100%|██████████| 100/100 [00:06<00:00, 15.29it/s]Comparing Forenames\n\nComparing Institutions\n\nComparing Emails\n\nComparing Countries\n\ncluster_counts:\n 4    37\n 0    31\n 1    17\n 2     7\n 3     4\n 5     3\n-1     1\nName: cluster, dtype: int64\nFor this clustering, N=100\n1 instances, or 1.0 percent, were clustered as noise\ntop cluster is 37.0 percent of the total\nhandled 100 papers\niteration time: 0.0001270771026611328\n\n"
+        }
+      ],
+      "source": [
+        "clusters_df=yuval_dbscan.run_db_scan(df_core[:100])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 77,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "clusters_df=metric_eval_2.assign_labels_to_clusters(clusters_df,clusters_df.cluster_pred.unique())\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 78,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": "Number of clusters (DBS): 7\nNumber of unique authors: 6\nPrecision score: 1.0, Recall score: 0.99\n                 1 cluster(s)  2 cluster(s)\nmis_integration             5             1\nmis_separation              5             1\n"
+        }
+      ],
+      "source": [
+        "df_eval = metric_eval_2.get_metrics(clusters_df)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -154,15 +209,6 @@
         "1) 3 distinct authors (each having ~30 papers) // use_case = \"3_dist_auth\" <br>\n",
         "2) 2 distinct authors (one with ~30 papers, the other with ~10 papers) // use_case = \"2_dist_dif_auth\"<br>\n",
         "3) 3 authors that share the same name (together has 50 papers [43,4,3]) // use_case =  \"1_auth\"\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 38,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "df_core = sim_matrix_3.top_authors(df,use_case = \"base\")"
       ]
     },
     {
